--- a/README
+++ b/README
@@ -1,3 +1,5 @@
 Graphviz - Graph Drawing Programs from AT&T Research and Lucent Bell Labs
 
 See doc/build.html for prerequisites and detailed build notes.
+
+Adding a test line
