--- a/README
+++ b/README
@@ -3,3 +3,4 @@ Graphviz - Graph Drawing Programs from AT&T Research and Lucent Bell Labs
 See doc/build.html for prerequisites and detailed build notes.
 
 Adding a test line
+Adding a second test line
