--- a/README
+++ b/README
@@ -5,3 +5,4 @@ See doc/build.html for prerequisites and detailed build notes.
 Adding a test line
 Adding a second test line
 Adding a third test line
+Adding a fourth test line
