--- a/README
+++ b/README
@@ -6,4 +6,4 @@ Adding a test line
 Adding a second test line
 Adding a third test line
 Adding a fourth test line
-Adding a fith test line
+Adding a 5th test line
